<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Provider Navigation Items -->
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />

    <item
        android:id="@+id/nav_client_history"
        android:icon="@drawable/ic_history"
        android:title="@string/client_history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <!-- Patient Navigation Items -->
    <item
        android:id="@+id/nav_providers"
        android:icon="@drawable/ic_provider"
        android:title="@string/providers"
        android:visible="false" />

    <item
        android:id="@+id/nav_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload"
        android:visible="false" />
</menu>
